# total-recall

./: .dockerignore  .env.example  .gitignore  CONTEXT_FOR_AGENT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  TR-1-task-prompt.md  TR-4-task.md  WINS.md  bender-TR-12-13-checkpoint.md  bender-TR-12-13-final-push.md  bender-TR-14-checkpoint.md  bender-TR-14-prompt.md  bender-TR-14-resume.md  bender-TR-7-prompt.md  bender-TR-deploy-hyper01.md  build.rs  challenges.md  config.hyper01.yaml  config.yaml.example  docker-compose.hyper01.yml  docker-compose.yml  implementation.md  plan.md
docs/: ARCHITECTURE.md  QUICK-START.md  spark-trtllm-runbook.md
extensions/openclaw/: README.md  index.ts  openclaw.plugin.json
src/: config.rs  error.rs  lib.rs  main.rs
src/mcp/: server.rs
src/memory/: embedder.rs  file_parser.rs  mod.rs  models.rs  store.rs
tests/: integration.rs
