[package]
name = "total-recall"
version = "0.1.0"
edition = "2024"
authors = ["J. Gavin Ray"]
description = "Agentic memory MCP server with SQLite + vector search + markdown files"
license = "GPL-2.0"
repository = "https://github.com/jgavinray/total-recall"
build = "build.rs"

[dependencies]
# MCP SDK — official Rust SDK (modelcontextprotocol/rust-sdk)
rmcp = { version = "1.2", features = [
    "server",
    "macros",
    "transport-io",
    "transport-streamable-http-server",
    "schemars",
] }

# HTTP layer for Streamable HTTP transport
axum = { version = "0.8", features = ["macros"] }
tokio-util = "0.7"

# JSON schema generation (required by rmcp macros)
schemars = "1.0"

# Async runtime
tokio = { version = "1", features = ["full", "rt-multi-thread", "macros", "sync", "time"] }

# SQLite with sqlite-vec extension (bundled via sqlite-vec crate)
rusqlite = { version = "0.30", features = ["bundled"] }

# ONNX for embeddings (using release candidate until stable 2.0)
ort = "2.0.0-rc.12"

# Tokenizer for BERT-based embeddings (all-MiniLM-L6-v2)
# fancy-regex is pure Rust (avoids C onig dependency)
tokenizers = { version = "0.21", default-features = false, features = ["fancy-regex"] }

# HTTP client for model download (blocking for use in sync context)
reqwest = { version = "0.12", features = ["blocking"] }

# Markdown parsing
pulldown-cmark = "0.12"

# YAML config & frontmatter
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# UUID for timestamps
uuid = { version = "1.17", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# File watching
notify = "8.2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Paths & dirs
dirs = "6.0"
once_cell = "1.21"

# Vector operations
ndarray = "0.16"

# Async trait
async-trait = "0.1"
sqlite-vec = "0.1.6"

[dev-dependencies]
tempfile = "3.21"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true

[build-dependencies]
# For building sqlite-vec extension
cc = "1.2"
